# spacy-sentence-bert

./: .gitignore  MANIFEST.in  README.md  build_models.sh  create.py  main.py  requirements.txt  setup.cfg  setup.py  test.py
spacy_sentence_bert/: __init__.py  language.py  util.py
spacy_sentence_bert/meta/: en_allenai_specter.json  en_average_word_embeddings_glove.6B.300d.json  en_average_word_embeddings_glove.840B.300d.json  en_average_word_embeddings_glove_6B_300d.json  en_average_word_embeddings_glove_840B_300d.json  en_average_word_embeddings_komninos.json  en_average_word_embeddings_levy_dependency.json  en_bert_base_nli_cls_token.json  en_bert_base_nli_max_tokens.json  en_bert_base_nli_mean_tokens.json  en_bert_base_nli_stsb_mean_tokens.json  en_bert_large_nli_cls_token.json  en_bert_large_nli_max_tokens.json  en_bert_large_nli_mean_tokens.json  en_bert_large_nli_stsb_mean_tokens.json  en_distilbert_base_nli_mean_tokens.json  en_distilbert_base_nli_stsb_mean_tokens.json  en_msmarco_distilbert_base_v2.json  en_msmarco_distilroberta_base_v2.json  en_msmarco_roberta_base_v2.json  en_nli_bert_base.json  en_nli_bert_base_cls_pooling.json  en_nli_bert_base_max_pooling.json  en_nli_bert_large.json  en_nli_bert_large_cls_pooling.json  en_nli_bert_large_max_pooling.json  en_nli_distilbert_base.json  en_nli_distilbert_base_max_pooling.json  en_nli_roberta_base.json  en_nli_roberta_large.json  en_nq_distilbert_base_v1.json  en_paraphrase_distilroberta_base_v1.json  en_quora_distilbert_base.json  en_roberta_base_nli_mean_tokens.json  (+18 more)
tests/: test_load_nlp.py
