[metadata]
version = 0.0.1
description = SpaCy models for using sentence-BERT
description-file = README.md
url = https://github.com/MartinoMensio/spacy-universal-sentence-encoder-tfhub
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
include_package_data = true
install_requires =
    sentence-transformers
    spacy>=2.3.0,<2.4.0
[options.entry_points]
spacy_factories =
    sentencebert_overwrite_vectors = spacy_sentence_bert:OverwriteVectors
    sentencebert_add_model_to_doc = spacy_sentence_bert:AddModelToDoc