[metadata]
version = 0.1.0
description = SpaCy models for using sentence-BERT
description-file = README.md
url = https://github.com/MartinoMensio/spacy-sentence-berts
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
include_package_data = true
install_requires =
    sentence-transformers
    spacy>=3.0.0,<4.0.0
    protobuf # XLMRobertaConverter requires it
[options.entry_points]
spacy_factories =
    sentence_bert = spacy_sentence_bert:SentenceBert
